# DocuChat-AI

./: readme.md
app/: .envsample  .gitignore  main.py  pyproject.toml  rag.py  requirement.txt
frontend-rag/: index.html  package-lock.json  package.json
frontend-rag/src/: App.jsx
frontend-rag/src/components/: RAGChatbot.jsx
