[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-mistralai>=1.1.4",
    "langchain-text-splitters>=1.1.2",
    "mistralai>=1.12.4",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "pypdf>=6.12.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sentence-transformers>=2.2.2",
    "tiktoken>=0.13.0",
    "unstructured[docx,pptx,xlsx]>=0.22.29",
    "uvicorn>=0.47.0",
    "xlrd>=2.0.2",
]
